--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\AuthorDTO.cs" />
-    <Compile Include="Factories\AuthorFactory.cs" />
+    <Compile Include="Factories\WebFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\WebService.cs" />
   </ItemGroup>
