--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -57,10 +57,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\AuthorBookDTO.cs" />
+    <Compile Include="DTO\BookDTO.cs" />
     <Compile Include="DTO\AuthorDTO.cs" />
-    <Compile Include="Factories\WebFactory.cs" />
+    <Compile Include="DTO\CommentDTO.cs" />
+    <Compile Include="DTO\PublisherDTO.cs" />
+    <Compile Include="Factories\AuthorBookFactory.cs" />
+    <Compile Include="Factories\CommentFactory.cs" />
+    <Compile Include="Factories\PublisherFactory.cs" />
+    <Compile Include="Factories\BookFactory.cs" />
+    <Compile Include="Factories\AuthorFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\WebService.cs" />
+    <Compile Include="Service\AuhtorBookService.cs" />
+    <Compile Include="Service\CommentService.cs" />
+    <Compile Include="Service\PublisherService.cs" />
+    <Compile Include="Service\BookService.cs" />
+    <Compile Include="Service\AuthorService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
