--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -58,9 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
-    <Compile Include="Interfaces\IWebRepository.cs" />
+    <Compile Include="Interfaces\IEFRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\WebRepository.cs" />
+    <Compile Include="Repositories\EFRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj">
